<resources>
    <string name="app_name">ComandAR</string>

    <!--  LOGIN VIEW STRINGS  -->
    <string name="title_login">Iniciar sesión</string>
    <string name="email_input">Correo electrónico</string>
    <string name="password_input">Contraseña</string>
    <string name="remember_label">Recordar sesion</string>
    <string name="forgot_link">¿Olvidaste tu contraseña?</string>
    <string name="login_button">Iniciar sesión</string>
    <string name="register_link">¿No tienes una cuenta? Registrate</string>
    <string name="location_link">Consultar informacion del local</string>

    <!--  REGISTER VIEW STRINGS  -->
    <string name="title_register">Crear cuenta</string>
    <string name="name_input">Nombre/s</string>
    <string name="lastname_input">Apellido/s</string>
    <string name="confirm_password_input">Confirmar contraseña</string>
    <string name="phone_input">Telefono o celular</string>
    <string name="photo_input">Seleccione una foto de perfil...</string>
    <string name="register_button">Crear cuenta</string>

    <!--  PROFILE VIEW STRINGS  -->
    <string name="title_profile">Perfil</string>
    <string name="infosec_title">Información</string>
    <string name="tables_subtitle">Mesas asignadas</string>
    <string name="contact_subtitle">Contacto</string>
    <string name="accountsec_title">Cuenta</string>
    <string name="edit_profile_subtitle">Editar perfil</string>
    <string name="logout_button">Cerrar sesión</string>

    <!--  RESUME ORDER VIEW STRINGS  -->
    <string name="title_resume">Resumen del Pedido</string>
    <string name="detailsec_title">Detalles del Pedido</string>
    <string name="subtotal_subtitle">Subtotal</string>
    <string name="taxes_subtitle">Impuestos (7%)</string>
    <string name="total_subtitle">Total</string>
    <string name="paysec_title">Opciones de pago</string>
    <string name="cobro_subtitle">Cobro total</string>
    <string name="divide_subtitle">Dividir por personas</string>
    <string name="pay_confirm_button">Confirmar pago</string>

    <!--  PRODUCT DETAIL VIEW STRINGS  -->
    <string name="title_product_detail">Detalle de Producto</string>
    <string name="notes_subtitle">Notas personalizadas</string>
    <string name="increase_button">+</string>
    <string name="decrease_button">-</string>
    <string name="add_button">Agregar al Pedido</string>

    <!--  TABLES VIEW STRINGS  -->
    <string name="title_table">Mesas</string>

    <string name="table_number_format">Mesa %02d</string>
    <string name="table_status_format">Estado: %s</string>
    <string name="table_assigned_to_you">Asignada a ti (%s)</string>
    <string name="table_attended_by">Atendida por: %s</string>
    <string name="table_available_to_assign">Disponible para asignar</string>

    <!--  ITEM TABLE LIST STRINGS  -->
    <string name="assign_button">Asignar</string>
    <string name="unassign_button">Desasignar</string>

    <!--  EXAMPLE VALUE STRINGS  -->
    <string name="example_name">Carlos</string>
    <string name="example_job">Camarero</string>
    <string name="example_email">carlos@restaurante.com</string>
    <string name="example_table_numbers">3</string>
    <string name="example_contact_phone">+34 666 777 888</string>
    <string name="example_table_number">Mesa 7</string>
    <string name="example_subtotal">$35.00</string>
    <string name="example_taxes">$2.45</string>
    <string name="example_total">$37.45</string>
    <string name="example_product_name">Taco de Carnitas</string>
    <string name="example_product_category">Tacos</string>
    <string name="example_product_description">Taco de carnitas con cebolla, cilantro y salsa roja. Servido con limones y rabanitos.</string>
    <string name="example_product_price">$3.50</string>
    <string name="example_product_count">1</string>
    <string name="example_status_table_description">En servicio por camarero</string>
    <string name="example_status_table">Estado: Ocupada</string>
    <string name="example_order_product_name">Cerveza Artesanal IPA</string>
    <string name="example_order_product_count">Cantidad: 2</string>
    <string name="example_order_product_subtotal">$12.00</string>
    <string name="example_uri_image">URI de la imagen</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Split Bill View Strings-->
    <string name="title_split_bill">Dividir Cuenta - Mesa %d</string>
    <string name="number_of_people">Número de Personas</string>
    <string name="items_of_the_order">Ítems del Pedido</string>
    <string name="select_person_to_assign">Selecciona Persona %d para atribuir un ítem.</string>
    <string name="unassigned_item">No atribuido</string>
    <string name="summary_for_person">Resumen - Persona %d</string>
    <string name="total_for_person">Total (Persona %d)</string>
    <string name="order_total">Total del Pedido:</string>
    <string name="confirm_split">Confirmar División</string>
    <string name="mode_single_payment">Pago Único</string>
    <string name="mode_assign_items">Asignar Ítems</string>
    <string name="mode_split_equally">Dividir Igualmente</string>
    <string name="item_divided">(dividido)</string>
</resources>