<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="16dp"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/login_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="28sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="20dp"
        android:text="@string/title_login" />

    <EditText
        android:id="@+id/input_email"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginBottom="12dp"
        android:layout_marginTop="8dp"
        android:paddingHorizontal="12dp"
        android:focusable="true"
        android:clickable="true"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/email_input"/>

    <EditText
        android:id="@+id/input_password"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="12dp"
        android:paddingHorizontal="12dp"
        app:passwordToggleEnabled="true"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/password_input"/>

    <CheckBox
        android:id="@+id/checkbox_remember"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/remember_label"
        android:layout_marginBottom="16dp" />

    <TextView
        android:id="@+id/forgot_password_link"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/forgot_link"
        android:textAlignment="center"/>

    <Button
        android:id="@+id/button_login"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="24dp"
        android:text="@string/login_button"
        app:cornerRadius="5dp" />

    <TextView
        android:id="@+id/register_account_link"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/register_link"
        android:textAlignment="center"/>
</LinearLayout>
