<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="16dp"
    tools:context=".RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:orientation="horizontal"
        android:gravity="center">

        <ImageView
            android:id="@+id/icon_back"
            android:layout_width="24dp"
            android:layout_height="24dp"
            app:srcCompat="@drawable/arrow_back_24px"/>

        <TextView
            android:id="@+id/register_title"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_register"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:layout_marginRight="20dp"/>

    </LinearLayout>

    <EditText
        android:id="@+id/input_register_name"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginBottom="12dp"
        android:layout_marginTop="12dp"
        android:paddingHorizontal="12dp"
        android:focusable="true"
        android:clickable="true"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/name_input"/>

    <EditText
        android:id="@+id/input_register_lastname"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="12dp"
        android:paddingHorizontal="12dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/lastname_input"/>

    <EditText
        android:id="@+id/input_register_email"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginBottom="12dp"
        android:layout_marginTop="12dp"
        android:paddingHorizontal="12dp"
        android:focusable="true"
        android:clickable="true"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/email_input"/>

    <EditText
        android:id="@+id/input_register_password"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="12dp"
        android:paddingHorizontal="12dp"
        app:passwordToggleEnabled="true"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/password_input"/>

    <EditText
        android:id="@+id/input_register_phone"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginBottom="12dp"
        android:layout_marginTop="12dp"
        android:paddingHorizontal="12dp"
        android:focusable="true"
        android:clickable="true"
        android:ems="10"
        android:inputType="phone"
        android:hint="@string/phone_input"/>

    <EditText
        android:id="@+id/input_register_photo"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="12dp"
        android:paddingHorizontal="12dp"
        android:ems="10"
        android:hint="@string/photo_input"/>

    <Button
        android:id="@+id/button_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register_button"
        app:cornerRadius="5dp"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="12dp"/>
</LinearLayout>
