<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DetailProductActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="72dp"
                android:paddingHorizontal="16dp"
                android:orientation="horizontal"
                android:gravity="center">

                <ImageView
                    android:id="@+id/icon_back"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    app:srcCompat="@drawable/arrow_back_24px"/>

                <TextView
                    android:id="@+id/detail_product_title"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/title_product_detail"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textAlignment="center"
                    android:layout_marginRight="20dp"/>
            </LinearLayout>

            <ImageView
                android:id="@+id/image_product"
                android:layout_width="match_parent"
                android:layout_height="230dp"
                android:background="@color/grey"
                app:srcCompat="@drawable/panorama_24px" />

            <TextView
                android:id="@+id/product_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="16dp"
                android:paddingTop="20dp"
                android:paddingBottom="12dp"
                android:text="@string/example_product_name"
                android:textSize="22sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/product_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="16dp"
                android:paddingTop="4dp"
                android:paddingBottom="12dp"
                android:text="@string/example_product_category"
                android:textSize="14sp"/>

            <TextView
                android:id="@+id/product_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="16dp"
                android:paddingTop="4dp"
                android:paddingBottom="12dp"
                android:text="@string/example_product_description"
                android:textSize="16sp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="16dp"
                android:paddingVertical="12dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/notes_section_subtitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="8dp"
                    android:text="@string/notes_subtitle"
                    android:textSize="16sp"
                    android:textStyle="bold"/>

                <EditText
                    android:id="@+id/aditional_notes"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:ems="10"
                    android:gravity="start|top"
                    android:background="@color/grey"
                    android:inputType="textMultiLine" />
            </LinearLayout>

            <TextView
                android:id="@+id/product_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="16dp"
                android:paddingTop="4dp"
                android:paddingBottom="12dp"
                android:text="@string/example_product_price"
                android:textSize="14sp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:paddingHorizontal="16dp"
                android:paddingVertical="12dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/decrease_count"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    app:cornerRadius="5dp"
                    android:textStyle="bold"
                    android:textSize="14sp"
                    android:textColor="@color/black"
                    android:backgroundTint="@color/white"
                    android:text="@string/decrease_button" />

                <Button
                    android:id="@+id/actual_count"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="12dp"
                    app:cornerRadius="5dp"
                    android:textStyle="bold"
                    android:textSize="14sp"
                    android:text="@string/example_product_count" />

                <Button
                    android:id="@+id/increase_count"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    app:cornerRadius="5dp"
                    android:textStyle="bold"
                    android:textSize="14sp"
                    android:textColor="@color/black"
                    android:backgroundTint="@color/white"
                    android:text="@string/increase_button" />
            </LinearLayout>

            <Button
                android:id="@+id/add_product_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginVertical="12dp"
                app:cornerRadius="5dp"
                android:text="@string/add_button" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>