<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="150dp"
    android:padding="16dp">


    <TextView
        android:id="@+id/table_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/example_table_number"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/table_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/example_status_table"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/table_number" />

    <TextView
        android:id="@+id/table_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/example_status_table_description"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/table_status" />

    <Button
        android:id="@+id/change_assign_button"
        android:layout_width="117dp"
        android:layout_height="42dp"
        android:paddingHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/unassign_button"
        app:cornerRadius="5dp"
        android:textSize="14sp"
        android:backgroundTint="@color/grey"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/table_description" />

    <ImageView
        android:id="@+id/table_image"
        android:layout_width="130dp"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/grey"
        app:srcCompat="@drawable/panorama_24px" />


</androidx.constraintlayout.widget.ConstraintLayout>